# aos_core_iam_cpp

./: CMakeLists.txt  README.md  conanfile.py  host_build.sh
.github/workflows/: build_test.yaml  check_format.yaml  mend_check.conf  mend_check.yaml  static_analysis.yaml
CMakeModules/: AosCoreAPI.cmake  AosCoreLib.cmake
cmake/: AosCoreAPI.cmake  AosCoreCommon.cmake  AosCoreLib.cmake  GenerateVersion.cmake
conan/: conanfile.py
src/: CMakeLists.txt  main.cpp  version.hpp.in
src/app/: CMakeLists.txt  app.cpp  app.hpp  log.hpp
src/config/: CMakeLists.txt  config.cpp  config.hpp  log.hpp
src/database/: CMakeLists.txt  database.cpp  database.hpp  log.hpp
src/iam/: CMakeLists.txt  grpchelper.cpp  grpchelper.hpp  log.hpp  remoteiamhandler.hpp
src/iam/client/: CMakeLists.txt  iamclient.cpp  iamclient.hpp
src/iam/server/: CMakeLists.txt  iamserver.cpp  iamserver.hpp
src/iamclient/: CMakeLists.txt  iamclient.cpp  iamclient.hpp  log.hpp  remoteiamhandler.hpp
src/iamserver/: CMakeLists.txt  iamserver.cpp  iamserver.hpp  log.hpp  nodecontroller.cpp  nodecontroller.hpp  nodeinfoprovider.cpp  nodeinfoprovider.hpp  protectedmessagehandler.cpp  protectedmessagehandler.hpp  publicmessagehandler.cpp  publicmessagehandler.hpp  streamwriter.hpp  systeminfo.cpp  systeminfo.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp  logmodule.hpp
src/nodeinfoprovider/: CMakeLists.txt  nodeinfoprovider.cpp  nodeinfoprovider.hpp  systeminfo.cpp
src/utils/: CMakeLists.txt  convert.cpp  convert.hpp  exception.hpp  grpchelper.cpp  grpchelper.hpp  json.cpp  json.hpp  log.hpp  time.cpp  time.hpp
src/visidentifier/: CMakeLists.txt  log.hpp  pocowsclient.cpp  pocowsclient.hpp  visconfig.cpp  visconfig.hpp  visidentifier.cpp  visidentifier.hpp  vismessage.cpp  vismessage.hpp  wsclient.hpp  wsclientevent.cpp  wsclientevent.hpp  wsexception.hpp  wspendingrequests.cpp  wspendingrequests.hpp
tests/: CMakeLists.txt
tests/config/: config_test.cpp
tests/database/: CMakeLists.txt  database_test.cpp
tests/iam/: CMakeLists.txt  gencertificates.cmake  iam_test.cpp
tests/iam_client/: iamclient_test.cpp
tests/iamclient/: CMakeLists.txt  iamclient_test.cpp
tests/iamserver/: CMakeLists.txt  iamserver_test.cpp  nodecontroller_test.cpp  nodeinfoprovider_test.cpp  protectedmessagehandler_test.cpp  publicmessagehandler_test.cpp
tests/include/mocks/: certhandlermock.hpp  certloadermock.hpp  identhandlermock.hpp  nodeinfoprovidermock.hpp  nodemanagermock.hpp  permissionhandlermock.hpp  provisionmanagermock.hpp  remoteiamhandlermock.hpp  vissubjectsobservermock.hpp  wsclientmock.hpp  x509providermock.hpp
tests/nodeinfoprovider/: CMakeLists.txt  nodeinfoprovider_test.cpp
tests/utils/: CMakeLists.txt  exception_test.cpp  json_test.cpp  time_test.cpp
tests/visidentifier/: CMakeLists.txt  pocowsclient_test.cpp  visconfig_test.cpp  visidentifier_test.cpp  vismessage_test.cpp  visserver.cpp  visserver.hpp
tests/visidentifier/cmake/: createcerts.cmake
