#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET aos_iamanager_test)

# ######################################################################################################################
# Defines
# ######################################################################################################################

# ######################################################################################################################
# Includes
# ######################################################################################################################

include_directories(${CMAKE_SOURCE_DIR}/src)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES utils/exception_test.cpp utils/time_test.cpp database/database_test.cpp config/config_test.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})

gtest_discover_tests(${TARGET})

# ######################################################################################################################
# Labraries
# ######################################################################################################################

target_link_libraries(
    ${TARGET}
    logger
    utils
    database
    config
    aoscommon
    Poco::Util
    GTest::gmock_main
)
