#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET utils)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES json.cpp time.cpp)

# ######################################################################################################################
# Includes
# ######################################################################################################################

# ######################################################################################################################
# Target
# ######################################################################################################################

add_library(${TARGET} STATIC ${SOURCES})

# ######################################################################################################################
# Labraries
# ######################################################################################################################

target_link_libraries(
    ${TARGET}
    PUBLIC aoscommon Poco::Foundation
    PRIVATE Poco::JSON
)
