#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET visidentifier)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES pocowsclient.cpp visconfig.cpp visidentifier.cpp vismessage.cpp wsclientevent.cpp wspendingrequests.cpp)

# ######################################################################################################################
# Includes
# ######################################################################################################################

# ######################################################################################################################
# Target
# ######################################################################################################################

add_library(${TARGET} STATIC ${SOURCES})

# ######################################################################################################################
# Labraries
# ######################################################################################################################

target_link_libraries(
    ${TARGET}
    PUBLIC utils aoscommon aosiam Poco::Foundation
    PRIVATE Poco::Crypto Poco::Net Poco::NetSSL
)
