#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET nodeinfoprovider_test)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES nodeinfoprovider_test.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

gtest_discover_tests(${TARGET})

target_link_libraries(${TARGET} nodeinfoprovider aoscoretestutils GTest::gmock_main)
