#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET visidentifier_test)

# ######################################################################################################################
# Gen certificates
# ######################################################################################################################

include(cmake/createcerts.cmake)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES pocowsclient_test.cpp visidentifier_test.cpp vismessage_test.cpp visserver.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})

gtest_discover_tests(${TARGET})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

target_link_libraries(${TARGET} visidentifier logger GTest::gmock_main)
